
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-master (Version de développement)
===========================

Carnets de notes:
- Ajout de modes de saisie de notes pour passer plus vite à la saisie de la note suivante.

Absences 2: 
- Possibilité de générer un fichier ODT de rappel à la loi (depuis Bilan individuel).
  Possibilité proposée au-delà d'un seuil d'absences paramétrable dans le module Abs2.

Bulletins:
- Possibilité d'autorisation exceptionnelle de saisie/modification d'appréciation 
  Vie scolaire en période partiellement close.
- Possibilité de restreindre l'accès aux moyennes des bulletins pour les parents/élèves,
  comme on peut déjà le faire pour les appréciations et avis du conseil de classe.
- Dispositif optionnel d'appréciations-types en fonction de la moyenne.

- Général:
- Possibilité de mettre à jour globalement les groupes d'après l'export EXP_ELEVES.xml

Gepi-1.7.3 (04/04/2018)
===========================

Carnets de notes:
- Possibilité de faire apparaitre une moyenne générale sur les relevés de notes 
  (malgré toutes les réserves sur la représentativité de cette moyenne).
- Prise en compte de la date d'entrée dans l'établissement pour ne pas proposer 
  la saisie de note si le devoir est antérieur à l'entrée de l'élève.
- Possibilité de limiter la taille du logo établissement sur le relevé de notes HTML.

Bulletins:
- Possibilité de limiter la taille du logo établissement sur le bulletin HTML.

Discipline:
- Possibilité de définir des utilisateurs spécifiques individuels comme destinataires 
  des alertes sur les incidents disciplinaires 
  (par exemple les comptes Assistante sociale, Infirmière,...).

Trombinoscopes:
- Encodage par défaut des photos avec extension de la chaine aléatoire.

Examens blancs:
- Possibilité d'insérer le fichier signature comme dans les bulletins.

LSUN:
- Possibilité d'exporter au format 2017 comme au format (LSU 18.2.0.0) qui doit
  être déployé à compter du 27/04/2018.