@@ -32,6 +32,7 @@ CREATE TABLE `aid` (`id` varchar(100) NOT NULL default '',
 `en_construction` ENUM( 'y', 'n' ) NOT NULL DEFAULT 'n', 
 `sous_groupe` ENUM( 'y', 'n' ) NOT NULL DEFAULT 'n',
 `inscrit_direct` ENUM( 'y', 'n' ) NOT NULL DEFAULT 'n',
+`visibilite_eleve` ENUM( 'y', 'n' ) NOT NULL DEFAULT 'y',
 PRIMARY KEY  (`id`)) ENGINE=MyISAM CHARACTER SET utf8 COLLATE utf8_general_ci;
 
 DROP TABLE IF EXISTS `aid_appreciations`;
